--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,4 +14,4 @@ variables:
 
 steps:
 - script: dotnet build --configuration $(biuldConfiguration)
-  displayName: 'dotnet build $(buildConfiguration'
+  displayName: 'dotnet build $(buildConfiguration)'
