--- a/.github/workflows/github_sync_azure_git.yaml
+++ b/.github/workflows/github_sync_azure_git.yaml
@@ -9,12 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Setup environment variables
-      run: |
-        echo ::set-env name=AZUREPAT::${{ secrets.AZUREPAT }}
-        echo ::set-env name=AZUSERNAME::${{ secrets.AZUSERNAME }}
-        echo ::set-env name=AZUSER_EMAIL::${{ secrets.AZUSER_EMAIL }}
-        echo ::set-env name=AZORG::${{ secrets.AZORG }}
+    # - name: Setup environment variables
+    #   run: |
+    #     echo ::set-env name=AZUREPAT::${{ secrets.AZUREPAT }}
+    #     echo ::set-env name=AZUSERNAME::${{ secrets.AZUSERNAME }}
+    #     echo ::set-env name=AZUSER_EMAIL::${{ secrets.AZUSER_EMAIL }}
+    #     echo ::set-env name=AZORG::${{ secrets.AZORG }}
     - name: Git clone repo
       run: |
         git clone https://github.com/rusc75/mslearn-tailspin-spacegame-web.git
